tooling/nargo_cli/tests/snapshots/execution_success/simple_comparison/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, y: Field) {
    assert((x as u32) < (y as u32));
}
